# loongson_project

./: CMakeLists.txt  README.md
include/: MainWindow.h  Settings.h  StatisticalTable.hpp  TimeChart.hpp  VideoChart.hpp  algo.hpp  json.hpp
src/: MainWindow.cpp  MainWindow.ui  Settings.cpp  Settings.ui  StatisticalTable.cpp  TimeChart.cpp  algo.cpp  main.cpp
